add ensamble results

--- a/notebooks/2-ensembles/2.2-mbto-homogeneous-ensemble-voting.ipynb
+++ b/notebooks/2-ensembles/2.2-mbto-homogeneous-ensemble-voting.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f798b24b",
    "metadata": {},
    "source": [
     "# Ensambles"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c10bb55e",
    "metadata": {},
    "source": [
     "Question: Could be use data from minotiry solvents? Does it add value/relevant information?\n",
@@ -22,7 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
+   "id": "74685d25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
+   "id": "f9ccf8a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
+   "id": "12ee59d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "id": "910686b5",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
+   "id": "2bebae69",
    "metadata": {
     "tags": []
    },
@@ -108,7 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
+   "id": "ba3550b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +127,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "42a623b6-f1c0-4d5a-a0cb-f9a46acff672",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(567, 63)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "27316626-9542-4acd-b1e9-53de4c288359",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5077, 63)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2bdb5a08-0fe7-406e-9e5a-b12bc32ac2a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1250.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
+   "id": "06ca7dec",
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "1484a55b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +245,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b684b22b",
    "metadata": {
     "tags": []
    },
@@ -195,6 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
+   "id": "f533d6e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,6 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
+   "id": "b8fbe7d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,6 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
+   "id": "8e932a3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,6 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
+   "id": "417d867d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,6 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
+   "id": "ef453a26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,6 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
+   "id": "9e7c3abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,6 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
+   "id": "6dae8eec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,6 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
+   "id": "2b7b1589",
    "metadata": {},
    "outputs": [
     {
@@ -628,6 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
+   "id": "ef8103c7",
    "metadata": {},
    "outputs": [
     {
@@ -1136,6 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
+   "id": "1d160882",
    "metadata": {},
    "outputs": [
     {
@@ -2004,6 +2086,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
+   "id": "ab7066cc",
    "metadata": {},
    "outputs": [
     {
@@ -2023,6 +2106,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
+   "id": "0fc9ac09",
    "metadata": {},
    "outputs": [
     {
@@ -2042,6 +2126,7 @@
   {
    "cell_type": "code",
    "execution_count": 251,
+   "id": "086e78a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2051,6 +2136,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
+   "id": "493d5050",
    "metadata": {},
    "outputs": [
     {
@@ -2949,6 +3035,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
+   "id": "b5dac699",
    "metadata": {},
    "outputs": [
     {
@@ -3104,6 +3191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "98ab9644",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3111,6 +3199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6a19bdcd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3118,6 +3207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "827ca40b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3125,6 +3215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "58df6926",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3132,6 +3223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5217d770",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3139,6 +3231,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
+   "id": "751ca64d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3166,6 +3259,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
+   "id": "a0fc65b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3179,6 +3273,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
+   "id": "a53d60e1",
    "metadata": {},
    "outputs": [
     {
@@ -3213,6 +3308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4797b0cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3237,6 +3333,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
+   "id": "bd6963fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3261,6 +3358,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
+   "id": "d428dbcb",
    "metadata": {},
    "outputs": [
     {
@@ -3282,6 +3380,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
+   "id": "db37862f",
    "metadata": {},
    "outputs": [
     {
@@ -3306,6 +3405,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
+   "id": "44176272",
    "metadata": {},
    "outputs": [
     {
@@ -3340,6 +3440,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
+   "id": "c3a3e19b",
    "metadata": {},
    "outputs": [
     {
@@ -3374,6 +3475,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "64bdbdf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3403,6 +3505,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "a840c150",
    "metadata": {},
    "outputs": [
     {
@@ -3477,6 +3580,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "ad88110f",
    "metadata": {},
    "outputs": [
     {
@@ -3505,6 +3609,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "07ebc00d",
    "metadata": {},
    "outputs": [
     {
@@ -3529,6 +3634,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "153fee3c",
    "metadata": {},
    "outputs": [
     {
@@ -3553,6 +3659,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "f6bf7883",
    "metadata": {},
    "outputs": [
     {
@@ -3577,6 +3684,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "df379abc",
    "metadata": {},
    "outputs": [
     {
@@ -3608,6 +3716,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "0c7023fa",
    "metadata": {},
    "outputs": [
     {
@@ -3752,6 +3861,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "2c8ce51a",
    "metadata": {},
    "outputs": [
     {
@@ -3783,6 +3893,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "8eb8c3af",
    "metadata": {},
    "outputs": [
     {
@@ -3807,6 +3918,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "79168cb6",
    "metadata": {},
    "outputs": [
     {
@@ -3831,6 +3943,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
+   "id": "3c3f65ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3841,6 +3954,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "7d3965d9",
    "metadata": {},
    "outputs": [
     {
@@ -3873,6 +3987,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
+   "id": "49d05c7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3899,6 +4014,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
+   "id": "43238acc",
    "metadata": {},
    "outputs": [
     {
@@ -3933,6 +4049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ecfaac52",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3940,6 +4057,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
+   "id": "dcffbc6d",
    "metadata": {},
    "outputs": [
     {
@@ -3964,6 +4082,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
+   "id": "036579a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3978,6 +4097,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
+   "id": "bbe167f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3987,6 +4107,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
+   "id": "ab22c6ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3997,6 +4118,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
+   "id": "7d0e5905",
    "metadata": {},
    "outputs": [
     {
@@ -4021,6 +4143,7 @@
   {
    "cell_type": "code",
    "execution_count": 285,
+   "id": "91cc860f",
    "metadata": {},
    "outputs": [
     {
@@ -4043,6 +4166,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f1e13531",
    "metadata": {},
    "source": [
     "## Experiments"
@@ -4050,6 +4174,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "082de6ea",
    "metadata": {},
    "source": [
     "### Experiment 1: diversity by parameters"
@@ -4058,6 +4183,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
+   "id": "e4b7936c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4077,6 +4203,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
+   "id": "4b421156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4086,6 +4213,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
+   "id": "2ba4ff29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4127,6 +4255,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
+   "id": "bc726c3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4136,6 +4265,7 @@
   {
    "cell_type": "code",
    "execution_count": 275,
+   "id": "1d41cd25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4145,6 +4275,7 @@
   {
    "cell_type": "code",
    "execution_count": 276,
+   "id": "ea08c931",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4154,6 +4285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6f0418cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4163,6 +4295,7 @@
   {
    "cell_type": "code",
    "execution_count": 259,
+   "id": "895dae06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4173,6 +4306,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
+   "id": "e39cc5ff",
    "metadata": {},
    "outputs": [
     {
@@ -4198,6 +4332,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
+   "id": "ae648661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4239,6 +4374,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
+   "id": "fab00613",
    "metadata": {},
    "outputs": [
     {
@@ -4326,6 +4462,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
+   "id": "e39f1dda",
    "metadata": {},
    "outputs": [
     {
@@ -4413,6 +4550,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
+   "id": "fda30c58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4449,6 +4587,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
+   "id": "a75fa429",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4458,6 +4597,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
+   "id": "10645ab0",
    "metadata": {},
    "outputs": [
     {
@@ -4553,6 +4693,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f5bb09f",
    "metadata": {},
    "source": [
     "Features importances only computed for RandomForest"
@@ -4561,6 +4702,7 @@
   {
    "cell_type": "code",
    "execution_count": 1058,
+   "id": "b1953220",
    "metadata": {},
    "outputs": [
     {
@@ -4581,6 +4723,7 @@
   {
    "cell_type": "code",
    "execution_count": 1059,
+   "id": "72fe7400",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4590,6 +4733,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e48d767",
    "metadata": {},
    "source": [
     "model_cols = list(df_solvent_full_train.columns)\n",
@@ -4598,6 +4742,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2728e9d0",
    "metadata": {},
    "source": [
     "df_importance = pd.DataFrame({\"feature\": model_cols,\n",
@@ -4608,6 +4753,7 @@
   {
    "cell_type": "code",
    "execution_count": 1060,
+   "id": "bcabbde3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4616,6 +4762,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f753f68d",
    "metadata": {},
    "source": [
     "df_importance = pd.read_csv(\"random_forest_feat_importances.csv\")"
@@ -4624,6 +4771,7 @@
   {
    "cell_type": "code",
    "execution_count": 1061,
+   "id": "446bff54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4632,6 +4780,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2976fa76",
    "metadata": {},
    "source": [
     "plot_title = \"figures/feature_importances.pdf\"\n",
@@ -4667,6 +4816,7 @@
   {
    "cell_type": "code",
    "execution_count": 1062,
+   "id": "681470ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4680,6 +4830,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "707dd459",
    "metadata": {},
    "source": [
     "indexes = np.arange(0,60,6)"
@@ -4687,6 +4838,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ce60a10",
    "metadata": {},
    "source": [
     "tmp = df_importance.iloc[3:,:].reset_index(drop=True)\n",
@@ -4695,6 +4847,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dedf5809",
    "metadata": {},
    "source": [
     "tmp['color'] = np.where(tmp['feature'].str.startswith(\"solvent\"), 'red', 'grey')"
@@ -4702,6 +4855,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7cf85825",
    "metadata": {},
    "source": [
     "solvent_index = tmp[tmp.feature.str.startswith(\"solvent\")].index"
@@ -4709,6 +4863,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25be5cc9",
    "metadata": {},
    "source": [
     "plot_df_importances(tmp.iloc[list(indexes) + list(solvent_index)]\\\n",
@@ -4718,6 +4873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "efaaa9f1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4728,9 +4884,9 @@
    "hash": "2dd68b6b88d78f72e555cd6564eaf72c9813991942e2722f811fa2c9051f75f2"
   },
   "kernelspec": {
-   "display_name": "thesis-repo",
+   "display_name": "tesis-notebooks",
    "language": "python",
-   "name": "thesis-repo"
+   "name": "tesis-notebooks"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4742,7 +4898,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
