--- a/notebooks/2-ensembles/2.2-mbto-plot-comparing-ensemble.ipynb
+++ b/notebooks/2-ensembles/2.2-mbto-plot-comparing-ensemble.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6ca6c169",
    "metadata": {},
    "source": [
     "-entrenamos en GBL\n",
@@ -17,6 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "36c24631",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "7ea27590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "af12c1f3",
    "metadata": {},
    "outputs": [
     {
@@ -66,6 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "f1eefca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "033f26cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "ede8403a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "817263e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "7fd6501d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
+   "id": "4c92fdaa",
    "metadata": {},
    "outputs": [
     {
@@ -159,6 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "bce86725",
    "metadata": {},
    "outputs": [
     {
@@ -181,6 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
+   "id": "34a7b130",
    "metadata": {},
    "outputs": [
     {
@@ -203,6 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
+   "id": "7ead8d72",
    "metadata": {},
    "outputs": [
     {
@@ -225,6 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "86308fe6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -232,6 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e82a9a7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -239,6 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "95802c5d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -246,6 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "01b8921c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "112dd5ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,6 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
+   "id": "246de660",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,6 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
+   "id": "2ccbf831",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
+   "id": "0723234c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,6 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
+   "id": "5c8bd28f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,6 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
+   "id": "a88bedcb",
    "metadata": {},
    "outputs": [
     {
@@ -569,6 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
+   "id": "d207cd7e",
    "metadata": {},
    "outputs": [
     {
@@ -592,6 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
+   "id": "433e2dc4",
    "metadata": {},
    "outputs": [
     {
@@ -615,6 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
+   "id": "9a9a6a42",
    "metadata": {},
    "outputs": [
     {
@@ -638,6 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
+   "id": "4a159222",
    "metadata": {},
    "outputs": [
     {
@@ -661,6 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cc611420",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -668,6 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "2416a21b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,6 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "032f089c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,6 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "4eac90c2",
    "metadata": {},
    "outputs": [
     {
@@ -708,6 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "5767fab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,6 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
+   "id": "1e223ed6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,6 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
+   "id": "6264afc3",
    "metadata": {},
    "outputs": [
     {
@@ -790,6 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
+   "id": "3376a406",
    "metadata": {},
    "outputs": [
     {
@@ -812,6 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
+   "id": "0d42ce1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,6 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
+   "id": "758ae631",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,6 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
+   "id": "2d6a9035",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,6 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
+   "id": "283b6a5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,6 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
+   "id": "fa7916a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,6 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
+   "id": "c80e77e4",
    "metadata": {},
    "outputs": [
     {
@@ -904,6 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 336,
+   "id": "429f47c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,6 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
+   "id": "a66aef60",
    "metadata": {},
    "outputs": [
     {
@@ -1104,6 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 315,
+   "id": "7e3aaf52",
    "metadata": {},
    "outputs": [
     {
@@ -1126,6 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 324,
+   "id": "b425f253",
    "metadata": {},
    "outputs": [
     {
@@ -1148,6 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 327,
+   "id": "1bcb48c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,6 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": 328,
+   "id": "0189396d",
    "metadata": {},
    "outputs": [
     {
@@ -1192,6 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": 337,
+   "id": "20f19fbc",
    "metadata": {},
    "outputs": [
     {
@@ -1216,6 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 330,
+   "id": "06ecfc79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,6 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": 331,
+   "id": "f2a15d96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,6 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 332,
+   "id": "329a5363",
    "metadata": {},
    "outputs": [
     {
@@ -1257,6 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "823c1294",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1264,6 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7a66d9ef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1271,6 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "15d04eb8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1278,6 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "258ef2e5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1285,6 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9771ffa7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1292,6 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
+   "id": "2bcd5fdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,6 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
+   "id": "08cd15b6",
    "metadata": {},
    "outputs": [
     {
@@ -1324,6 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
+   "id": "ea711985",
    "metadata": {},
    "outputs": [
     {
@@ -1346,6 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c052fa93",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1353,9 +1413,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis-repo",
+   "display_name": "tesis-notebooks",
    "language": "python",
-   "name": "thesis-repo"
+   "name": "tesis-notebooks"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1367,7 +1427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
