Add ensmble results

--- a/notebooks/2-ensembles/2.1-mbto-generate-datasets.ipynb
+++ b/notebooks/2-ensembles/2.1-mbto-generate-datasets.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5e29ddcc",
    "metadata": {},
    "source": [
     "# Solvent Small Experiment"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d9cc1f5d",
    "metadata": {},
    "source": [
     "Question: Could be use data from minotiry solvents? Does it add value/relevant information?\n",
@@ -23,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "09af6612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "6eb70f0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +56,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ab399c2a",
    "metadata": {
     "tags": []
    },
@@ -62,6 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "0ededca6",
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d5c4d1c5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -86,6 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "0bc7ee6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "8d36e761",
    "metadata": {},
    "outputs": [
     {
@@ -125,6 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "d8617821",
    "metadata": {},
    "outputs": [
     {
@@ -145,6 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "1d2a9c68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,6 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "6e5a8458",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "b6284425",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "aa1e9cd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,6 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "261cfd57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "6d718b46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "b29dcf4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "023463d2",
    "metadata": {},
    "outputs": [
     {
@@ -246,6 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "25fa10ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,9 +277,9 @@
    "hash": "2dd68b6b88d78f72e555cd6564eaf72c9813991942e2722f811fa2c9051f75f2"
   },
   "kernelspec": {
-   "display_name": "thesis-repo",
+   "display_name": "tesis-notebooks",
    "language": "python",
-   "name": "thesis-repo"
+   "name": "tesis-notebooks"
   },
   "language_info": {
    "codemirror_mode": {
@@ -272,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
