--- a/notebooks/2-ensembles/2.2-mbto-individual-validation.ipynb
+++ b/notebooks/2-ensembles/2.2-mbto-individual-validation.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "74685d25",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "f9ccf8a6",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "12ee59d0",
    "metadata": {},
    "outputs": [],
@@ -75,12 +75,6 @@
     "from sklearn.model_selection import StratifiedGroupKFold\n",
     "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
     "import sklearn.svm as svm\n",
-    "import sklearn.tree as tree\n",
-    "\n",
-    "#metrics\n",
-    "from sklearn.metrics import recall_score\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import f1_score\n",
     "\n",
     "from imblearn.metrics import classification_report_imbalanced"
    ]
@@ -105,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "2bebae69",
    "metadata": {
     "tags": []
@@ -175,15 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2bdb5a08-0fe7-406e-9e5a-b12bc32ac2a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1250.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "06ca7dec",
    "metadata": {},
    "outputs": [
@@ -218,7 +223,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "1484a55b",
    "metadata": {},
    "outputs": [],
@@ -261,31 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "3f745d5c-20e9-46fc-8290-821fc5cc3cc2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results_path = 'results/ensamble/individual_validation/'\n",
-    "\n",
-    "models = {\n",
-    "    'knn':'KNeighborsClassifier',\n",
-    "    'lg': 'LogisticRegression',\n",
-    "    'rf':'RandomForestClassifier',\n",
-    "    'gbc':'GradientBoostingClassifier',\n",
-    "    'svm':'SVC',\n",
-    "    'svm_linear': 'SVC',\n",
-    "    'svm_poly': 'SVC',\n",
-    "    'svm_rbf': 'SVC',\n",
-    "    'bagg': 'BaggingClassifier',\n",
-    "    'dt': 'DecisionTreeClassifier'\n",
-    "    \n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 81,
    "id": "f533d6e7",
    "metadata": {},
    "outputs": [],
@@ -301,12 +282,10 @@
     "                model_method = getattr(linear_models, model_name)\n",
     "            except AttributeError:\n",
     "                try:\n",
+    "                    print('svm')\n",
     "                    model_method = getattr(svm, model_name)\n",
     "                except AttributeError:\n",
-    "                    try:\n",
-    "                        model_method = getattr(tree, model_name)\n",
-    "                    except AttributeError:\n",
-    "                        pass\n",
+    "                    pass\n",
     "    model = model_method(**model_config)\n",
     "    return model\n",
     "                \n",
@@ -403,47 +382,6 @@
     "    \n",
     "    return clf\n",
     "\n",
-    "def evaluation_pipeline(model_name, df, params):\n",
-    "    \n",
-    "    model = make_model(models[model_name], params['model_params'])\n",
-    "    \n",
-    "    X, y = split_X_y(df)\n",
-    "    \n",
-    "    pipeline_steps = [('std', StandardScaler()), \n",
-    "                      ('model', model)\n",
-    "                     ]\n",
-    "    pipeline = Pipeline(steps=pipeline_steps)\n",
-    "    \n",
-    "    k_fold_config = params['k_fold_config']\n",
-    "    \n",
-    "    cv = StratifiedShuffleSplit(**k_fold_config)\n",
-    "\n",
-    "    scoring={\n",
-    "            'recall_0': make_scorer(recall_score, average = 'macro', labels = [0]),\n",
-    "            'recall_1': make_scorer(recall_score, average = 'macro', labels = [1]),\n",
-    "            'f1_0': make_scorer(f1_score, average = 'macro', labels = [0]),\n",
-    "            'f1_1': make_scorer(f1_score, average = 'macro', labels = [1]),\n",
-    "            'precision_0': make_scorer(precision_score, average = 'macro', labels = [0]),\n",
-    "            'precision _1': make_scorer(precision_score, average = 'macro', labels = [1]),\n",
-    "            'recall': 'recall_macro',\n",
-    "            'f1': 'f1_macro',\n",
-    "            'precision': 'precision_macro', \n",
-    "            'matthew': make_scorer(matthews_corrcoef)\n",
-    "    }\n",
-    "    \n",
-    "    clf = cross_validate(X=X,\n",
-    "                         y=y, \n",
-    "                         estimator=pipeline, \n",
-    "                         cv=cv,\n",
-    "                         scoring=scoring,\n",
-    "                         n_jobs=-1)\n",
-    "    \n",
-    "    results = pd.DataFrame.from_dict(clf)\n",
-    "    \n",
-    "    results['model'] = model_name\n",
-    "    \n",
-    "    return results\n",
-    "\n",
     "\n",
     "def full_voting_pipeline(models_params, df, voting='soft'):\n",
     "    models_voting = []\n",
@@ -527,12 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 61,
    "id": "b8fbe7d4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "results_path = 'results/ensamble/grid_search_voting/'\n",
     "\n",
+    "models = {\n",
+    "    'knn':'KNeighborsClassifier',\n",
+    "    'lg': 'LogisticRegression',\n",
+    "    'rf':'RandomForestClassifier',\n",
+    "    'gbc':'GradientBoostingClassifier',\n",
+    "    'svm':'SVC',\n",
+    "    'svm_linear': 'SVC',\n",
+    "    'svm_poly': 'SVC',\n",
+    "    'svm_rbf': 'SVC',\n",
+    "    'bagg': 'BaggingClassifier'\n",
+    "}\n",
     "\n",
     "\n",
     "grid_params_lg_default = dict(\n",
@@ -577,7 +527,7 @@
     "                            model__weights='distance',\n",
     ")\n",
     "\n",
-    "k_splits = 3\n",
+    "k_splits = 2\n",
     "\n",
     "k_fold_config_default = {\n",
     "    'random_state': SEED,\n",
@@ -594,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 122,
    "id": "8e932a3f",
    "metadata": {},
    "outputs": [],
@@ -635,11 +585,6 @@
     "grid_params_rf['class_weight']='balanced'\n",
     "grid_params_rf['max_depth'] = 8\n",
     "\n",
-    "grid_param_dt = {\n",
-    "    'max_depth': 7,\n",
-    "    'class_weight': 'balanced'\n",
-    "}\n",
-    "\n",
     "# Bagging base estimator\n",
     "\n",
     "grid_params_bagg = {}\n",
@@ -650,140 +595,19 @@
     "\n",
     "    \n",
     "models_params_simple_estimators = {\n",
-    "    'knn': grid_params_knn,\n",
+    "  #  'knn': grid_params_knn,\n",
     "    'lg': grid_params_lg,\n",
     "    'svm_linear': grid_params_svm_linear,\n",
     "    'svm_poly': grid_params_svm_poly,\n",
     "    'svm_rbf': grid_params_svm_rbf,\n",
-    "    'rf': grid_params_rf,\n",
-    "    'gbc': grid_params_gbc,\n",
-    "    'dt': grid_param_dt\n",
-    "    \n",
+    "   'rf': grid_params_rf,\n",
+    "   'gbc': grid_params_gbc,\n",
     "}\n",
     "\n",
     "models_params_ensamble_estimators = {\n",
     "    'rf': grid_params_rf,\n",
     "    'gbc': grid_params_gbc,\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "4c74095c-647a-4922-9fd2-2323e62489bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'knn': {'n_jobs': -1, 'weights': 'distance', 'n_neighbors': 6},\n",
-       " 'lg': {'dual': False,\n",
-       "  'class_weight': 'balanced',\n",
-       "  'penalty': 'l1',\n",
-       "  'random_state': 2,\n",
-       "  'solver': 'saga',\n",
-       "  'n_jobs': -1,\n",
-       "  'C': 0.15,\n",
-       "  'max_iter': 3000},\n",
-       " 'svm_linear': {'class_weight': 'balanced',\n",
-       "  'degree': 3,\n",
-       "  'probability': True,\n",
-       "  'random_state': 2,\n",
-       "  'C': 10,\n",
-       "  'kernel': 'linear'},\n",
-       " 'svm_poly': {'class_weight': 'balanced',\n",
-       "  'degree': 3,\n",
-       "  'probability': True,\n",
-       "  'random_state': 2,\n",
-       "  'C': 10,\n",
-       "  'kernel': 'poly'},\n",
-       " 'svm_rbf': {'class_weight': 'balanced',\n",
-       "  'degree': 3,\n",
-       "  'probability': True,\n",
-       "  'random_state': 2,\n",
-       "  'C': 50,\n",
-       "  'kernel': 'rbf'},\n",
-       " 'rf': {'min_samples_split': 10,\n",
-       "  'min_samples_leaf': 3,\n",
-       "  'warm_start': False,\n",
-       "  'n_estimators': 60,\n",
-       "  'class_weight': 'balanced',\n",
-       "  'max_depth': 8},\n",
-       " 'gbc': {'subsample': 0.9,\n",
-       "  'min_samples_split': 7,\n",
-       "  'min_samples_leaf': 5,\n",
-       "  'random_state': 2,\n",
-       "  'n_estimators': 110,\n",
-       "  'max_depth': 7,\n",
-       "  'learning_rate': 0.15},\n",
-       " 'dt': {'max_depth': 7, 'class_weight': 'balanced'}}"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "models_params_simple_estimators"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "8fead946-d24b-4091-85c3-424639e708d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def report_cross_validation(models_params, df, file_name='no_name.csv'):\n",
-    "    cross_val_results = []\n",
-    "    for model_name, model_args in models_params.items():\n",
-    "    #for seed in seeds:\n",
-    "        #model_args['random_state'] = seed\n",
-    "        params = {'k_fold_config': k_fold_config_default,\n",
-    "                  'model_params': model_args \n",
-    "                 }\n",
-    "        df_cross_val = evaluation_pipeline(model_name, df, params)\n",
-    "        #df_cross_val['random_state'] = seed\n",
-    "        cross_val_results.append(df_cross_val)\n",
-    "    df_merged = pd.concat(cross_val_results, axis=0)\n",
-    "    df_merged.to_csv(results_path+results, index=None)\n",
-    "    return df_merged"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "cf4feb11-cdad-4a9c-996f-1bd899f13e77",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'results' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [75]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_best_single_estimator \u001b[38;5;241m=\u001b[39m \u001b[43mreport_cross_validation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodels_params_simple_estimators\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m                                                   \u001b[49m\u001b[43mdf_test_train\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                                                   \u001b[49m\u001b[43mfile_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msingle_estimators_validation_seed_from_1_5.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [74]\u001b[0m, in \u001b[0;36mreport_cross_validation\u001b[0;34m(models_params, df, file_name)\u001b[0m\n\u001b[1;32m     11\u001b[0m     cross_val_results\u001b[38;5;241m.\u001b[39mappend(df_cross_val)\n\u001b[1;32m     12\u001b[0m df_merged \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(cross_val_results, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m---> 13\u001b[0m df_merged\u001b[38;5;241m.\u001b[39mto_csv(results_path\u001b[38;5;241m+\u001b[39m\u001b[43mresults\u001b[49m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df_merged\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'results' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df_best_single_estimator = report_cross_validation(models_params_simple_estimators,\n",
-    "                                                   df_test_train,\n",
-    "                                                   file_name='single_estimators_validation_seed_from_1_5.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68f33866-7d1b-4ec0-9748-7598207f8dab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_best_single_estimator"
    ]
   },
   {
